@@ -1,4 +1,5 @@
-glrootpath = @INSTALLPATH@
+#glrootpath = @INSTALLPATH@
+glrootpath = /glftpd
 headerfile = /ftp-data/misc/who.head
 footerfile = /ftp-data/misc/who.foot
 maskeddirectories = /site/groups/ /site/admins/ /site/private/
