@@ -1,3 +1,4 @@
+20200529 -      - GeoIP2 info added to all output modes
 20180716 -      - Added host, ip and country code (GeoIP2) to --raw output
 20110918 -	- Proper support for the existing 64bit glftps
 		- Updated matchpath and strcomp
